syntax="proto3";

option  go_package = "amusing-x.com/ganymede/ganymedeservice";

package ganymde;

import "ganymede/proto/oauth_login.proto";

message IsLoginRequest {
  string sessionID = 1;
}

message IsLoginResponse {
  bool Login = 1;
  UserInfo user_info = 2;
}